--- a/First-lesson-project/.vscode/settings.json
+++ b/First-lesson-project/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "First Lesson project.sln"
+    "dotnet.defaultSolution": "First-lesson-project.sln"
 }
